--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -23,4 +23,4 @@
     volumes:
       - "/srv/jenkins:/var/jenkins_home"
     networks:
-      - name: jenkins_gitea_network
+      - name: interview_network
